--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
     "type": "wordpress-plugin",
     "require": {
         "php": ">=5.4.0",
-        "composer/installers": "~1.0"
+        "composer/installers": "~1.0",
+        "leafo/scssphp": "^0.6.7",
+        "oyejorge/less.php": "v1.7.0.13"
     }
 }
